# easycar

./: .env.example  .gitignore  Cargo.toml  README.md  Secrets.toml.example  Shuttle.toml  WORD_to_OSK_ID_mapping.md  easycar.service  release-plz.toml
.github/: CD.yml
.github/workflows/: CD.yml  cd.yml  release-plz.yml  release.yml
assets/: easycar.service
crates/info-car-api/: Cargo.toml
crates/info-car-api/src/: client.rs  error.rs  utils.rs
crates/info-car-api/src/client/: error.rs  exam_schedule.rs  mod.rs  reservations.rs  word_centers.rs
crates/info-car-api/src/client/reservation/: list.rs  mod.rs  new.rs  payment.rs  status.rs
crates/info-car-api/src/types/: endpoint.rs  license_category.rs  payment.rs  theory_or_practice_exam.rs
crates/info-car-api/src/types/reservation/: new.rs  status.rs
docs/: WORD-mapping.md
easycar/: CHANGELOG.md  Cargo.toml
easycar/src/: client.rs  lib.rs  main.rs  utils.rs
easycar/src/service/: mod.rs  workers.rs
info-car-api/: CHANGELOG.md  Cargo.toml
info-car-api/src/: client.rs  error.rs  lib.rs  types.rs  utils.rs
info-car-api/src/types/: endpoint.rs  exam_schedule.rs  license_category.rs  theory_or_practice_exam.rs  word_centers.rs
info-car-api/src/types/reservation/: list.rs  status.rs
src/: client.rs  lib.rs  logger.rs  main.rs  make.rs  service.rs  utils.rs
src/service/: mod.rs  workers.rs
