[package]
name = "easycar"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
default-run = "easycar-service"
repository = "https://github.com/kamack38/easycar"

[[bin]]
name = "easycar"
path = "src/bin/shuttle.rs"

[[bin]]
name = "easycar-service"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.39"
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "sync"] }
info-car-api = { version = "0.1.0", path = "./crates/info-car-api" }
reqwest = "0.12.9"
teloxide = { version = "0.13.0", features = ["macros"] }
chrono-tz = "0.10.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.8"
pretty_env_logger = "0.5.0"
log = "0.4.22"

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true

[profile.profiling]
inherits = "release"
strip = false
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
