[package]
name = "easycar"
description = "A telegram bot for getting exam dates from info-car.pl"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/kamack38/easycar"

[dependencies]
chrono = "0.4.40"
dotenvy = "0.15.7"
tokio = { version = "1.43.1", features = ["macros", "sync"] }
info-car-api = { version = "0.1.0", path = "../info-car-api" }
teloxide = { version = "0.16.0", features = [
  "ctrlc_handler",
  "macros",
  "rustls",
], default-features = false }
chrono-tz = "0.10.1"
shuttle-runtime = { version = "0.55.0", optional = true }
thiserror = "2.0.11"
pretty_env_logger = { version = "0.5.0", optional = true }
log = "0.4.26"

[features]
default = ["pretty_env_logger"]
shuttle = ["shuttle-runtime"]
