[package]
name = "info-car-api"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
regex = "1.11.1"
reqwest = { version = "=0.12.15", default-features = false, features = ["json", "rustls-tls", "cookies", "charset"] }
rustls = "0.23.23"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = "4.6.0"
serde_urlencoded = "0.7.1"
thiserror = "2.0.11"
url = "2.5.4"
