[package]
name = "info-car-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "cookies"] }
rustls = "0.23.12"
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde-aux = "4.5.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.63"
url = "2.5.2"
